--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,12 +10,15 @@ ndarray = "0.16"
 clap = "4.3"
 log = { version = "0.4" }
 env_logger = { version = "0.11" }
-##anndists = {path = "../anndists"}
-anndists = {git = "https://github.com/jianshu93/anndists"}
+anndists = { path = "../anndists" }
 anyhow = { version = "1.0.58" }
 csv = { version = "1.1" }
 annembed = {git = "https://github.com/jianshu93/annembed", default-features = false, features = ["simdeez_f", "intel-mkl-static"]}
 #annembed = { path = "../annembed", default-features = false, features = ["simdeez_f", "intel-mkl-static"]}
 #hnsw_rs = {git = "https://github.com/jean-pierreBoth/hnswlib-rs", features = ["simdeez_f"]}
 #hnsw_rs = {path = "../hnswlib-rs-new", features = ["simdeez_f"]}
-hnsw_rs = {git = "https://github.com/jianshu93/hnswlib-rs", features = ["simdeez_f"]}
+hnsw_rs = { git = "https://github.com/jianshu93/hnswlib-rs", rev = "97dcc91a2772b6371159eb010b6fed9f460df879", features = ["simdeez_f"] }
+
+[patch.crates-io]
+anndists = { path = "../anndists" }
+hnsw_rs = { git = "https://github.com/jianshu93/hnswlib-rs", rev = "97dcc91a2772b6371159eb010b6fed9f460df879" }
