--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ ndarray = "0.16"
 clap = "4.3"
 log = { version = "0.4" }
 env_logger = { version = "0.11" }
-anndists = { path = "../anndists" }
+anndists = { git = "https://github.com/Sam-Shebin/anndists.git", rev = "c3aad712" }
 anyhow = { version = "1.0.58" }
 csv = { version = "1.1" }
 annembed = {git = "https://github.com/jianshu93/annembed", default-features = false, features = ["simdeez_f", "intel-mkl-static"]}
@@ -20,5 +20,5 @@ annembed = {git = "https://github.com/jianshu93/annembed", default-features = fa
 hnsw_rs = { git = "https://github.com/jianshu93/hnswlib-rs", rev = "97dcc91a2772b6371159eb010b6fed9f460df879", features = ["simdeez_f"] }
 
 [patch.crates-io]
-anndists = { path = "../anndists" }
+# keep hnsw_rs pinned at workspace level; no per-package patches here
 hnsw_rs = { git = "https://github.com/jianshu93/hnswlib-rs", rev = "97dcc91a2772b6371159eb010b6fed9f460df879" }
