--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,8 @@ annembed = {git = "https://github.com/jianshu93/annembed", default-features = fa
 #annembed = { path = "../annembed", default-features = false, features = ["simdeez_f", "intel-mkl-static"]}
 #hnsw_rs = {git = "https://github.com/jean-pierreBoth/hnswlib-rs", features = ["simdeez_f"]}
 #hnsw_rs = {path = "../hnswlib-rs-new", features = ["simdeez_f"]}
-hnsw_rs = { git = "https://github.com/jianshu93/hnswlib-rs", rev = "97dcc91a2772b6371159eb010b6fed9f460df879", features = ["simdeez_f"] }
+#hnsw_rs = { git = "https://github.com/jianshu93/hnswlib-rs", rev = "97dcc91a2772b6371159eb010b6fed9f460df879", features = ["simdeez_f"] }
+#hnsw_rs = { path = "../hnswlib-rs", features = ["simdeez_f"] }
 
-
+hnsw_rs = { git = "https://github.com/Sam-Shebin/hnswlib-rs.git", features = ["simdeez_f"] }
 
