--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,7 @@ env_logger = { version = "0.11" }
 anndists = { git = "https://github.com/Sam-Shebin/anndists.git", rev = "c3aad712" }
 anyhow = { version = "1.0.58" }
 csv = { version = "1.1" }
-annembed = {git = "https://github.com/jianshu93/annembed", default-features = false, features = ["simdeez_f", "intel-mkl-static"]}
-#annembed = { path = "../annembed", default-features = false, features = ["simdeez_f", "intel-mkl-static"]}
+annembed = { git = "https://github.com/Sam-Shebin/annembed.git", rev = "6327ee8d", default-features = false, features = ["simdeez_f", "intel-mkl-static"] }
 #hnsw_rs = {git = "https://github.com/jean-pierreBoth/hnswlib-rs", features = ["simdeez_f"]}
 #hnsw_rs = {path = "../hnswlib-rs-new", features = ["simdeez_f"]}
 #hnsw_rs = { git = "https://github.com/jianshu93/hnswlib-rs", rev = "97dcc91a2772b6371159eb010b6fed9f460df879", features = ["simdeez_f"] }
